@@ -34,18 +34,22 @@ All games enforce standard rulesets:
   - Active sessions (`session.csv`)
   - Game statistics (`stats.csv`)
 
-## Running the Program
+## How to Run This Program
 
-### Prerequisites
-- IntelliJ IDEA 2024.3.5
-- JUnit 5.8.1
-- Maven 3.8+
-- JavaFx SDK 21.0.2
+### Requirements
+- **Java 23 SDK**
+- **JavaFX 23.0.1 SDK** ([download here](https://gluonhq.com/products/javafx/))
+- **JUnit 5.8.1** (only required for running tests, not needed for the JAR)
 
-### Installation
-```bash
-git clone https://csgit.ucalgary.ca/sanbeer.shafin/seng300-w25-project
-```
+### Run from the Provided JAR
+
+#### Instructions from Windows
+If you've installed JavaFX SDK to the default location:
+
+java --module-path "C:\Program Files\Java\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar seng-w25-project.jar
+
+Make sure you adjust the path if your JavaFX SDK is installed elsewhere.
+
 
 ### First-Time Setup
 The system will automatically generate required data files:
